# Unify

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  io.github.denysmb.unify.json  io.github.denysmb.unify.metainfo.xml
po/: es.po
src/: CMakeLists.txt  main.cpp
src/core/: configmanager.cpp  configmanager.h
src/qml/: Main.qml
src/qml/components/: DetachedServiceWindow.qml  ServiceIconButton.qml  ServiceTabBar.qml  ServiceWebView.qml  ServicesSidebar.qml  TabWebView.qml  WebViewStack.qml
src/qml/dialogs/: ServiceDialog.qml  WorkspaceDialog.qml
src/qml/drawers/: WorkspaceDrawer.qml
src/utils/: faviconcache.cpp  faviconcache.h  keyeventfilter.cpp  keyeventfilter.h
